--- a/project/package.json
+++ b/project/package.json
@@ -8,6 +8,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/react": "^18.2.37",
     "prettier": "^3.1.0",
     "turbo": "latest"
   },
