--- a/project/package.json
+++ b/project/package.json
@@ -17,6 +17,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "axios": "^1.7.9"
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
+    "react-redux": "^9.2.0"
   }
 }
